tests/snapshots/yaml_suite_snapshots__yaml_suite_ZYU8_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- skip: true
  note: The following cases are valid YAML according to the 1.2 productions but not at all usefully valid. We don't want to encourage parsers to support them when we'll likely make them invalid later.
  also: MU58
  name: Directive variants
  from: "@ingydotnet"
  tags: directive
  yaml: "%YAML1.1\n---\n"
  tree: "+STR\n +DOC ---\n  =VAL :\n -DOC\n-STR\n"
  json: "null\n"
- yaml: "%***\n---\n"
- yaml: "%YAML 1.1 1.2\n---\n"
- yaml: "%YAML 1.12345\n---\n"
